# CommandLineTxtEditor

./: .gitignore  CMakeLists.txt  README.md  a.out  ramez.txt  test.txt
include/: TextBuffer.h
src/: TextBuffer.cpp  main.cpp
